CHANGES IN VERSION 1.2.0
------------------------

BUG FIXES

    o assay colnames() must agree with colData rownames()

CHANGES IN VERSION 0.3.*
------------------------

NEW FEATURES

    o readKallisto() and readKallistoBootstrap() input kallisto
      transcript quantification output into SummarizedExperiment (and
      other) instances.