@@ -1,6 +1,10 @@
 CHANGES IN VERSION 1.2.0
 ------------------------
 
+NEW FEATURES
+
+    o NULL colnames() supported during construction
+
 BUG FIXES
 
     o assay colnames() must agree with colData rownames()
